refactor gapi wip

--- a/fx/fx.vcxproj
+++ b/fx/fx.vcxproj
@@ -236,6 +236,7 @@
     <ClInclude Include="editor\uiDraw.h" />
     <ClInclude Include="editor\viewCam.h" />
     <ClInclude Include="editor\wndProc.h" />
+    <ClInclude Include="gApi.h" />
     <ClInclude Include="generated\apiReflection.h" />
     <ClInclude Include="generated\constBufReflect.h" />
     <ClInclude Include="generated\libList.h" />
