--- a/fx/fx.vcxproj
+++ b/fx/fx.vcxproj
@@ -248,8 +248,9 @@
     <ClInclude Include="projectFiles\cubemap.h" />
     <ClInclude Include="projectFiles\loop.h" />
     <ClInclude Include="projectFiles\object.h" />
+    <ClInclude Include="projectFiles\sound\trackData.h" />
     <ClInclude Include="projectFiles\sound\tracker.h" />
-    <ClInclude Include="projectFiles\sound\track_struct.h" />
+    <ClInclude Include="projectFiles\sound\trackStruct.h" />
     <ClInclude Include="projectFiles\texList.h" />
     <ClInclude Include="reflector.h" />
     <ClInclude Include="settings.h" />
